--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2212,7 +2212,8 @@ input, select, textarea {
 		}
 
 			.panel > *.color0 {
-				background-image: url("../../images/overlay.png"), linear-gradient( 45deg,var(--c1) 45% ,var(--c2) 45%, var(--c2)10%);
+				background-image: url("../../images/overlay.png");
+				background-color: var(--c5);
 				background-size: 128px 128px, auto;
 			}
 
