Home page edits External links, color switch

--- a/_includes/index.html
+++ b/_includes/index.html
@@ -112,6 +112,19 @@
 							</div>
 						</section>
 
+						<section class="panel color4-alt">
+							<div class="intro color4">
+								<h2 class="major">Contact</h2>
+								<ul class="contact-icons color2">
+									<li class="icon brands fa-linkedin"><a href="#">LinkedIn</a></li>
+									<li class="icon brands fa-youtube"><a href="#">Youtube</a></li>
+									<li class="icon brands fa-instagram"><a href="#">Instagram</a></li>
+									<li class="icon brands fa-github"><a href="#">GitHub</a></li>
+									<li class="icon brands fa-spotify"><a href="#">Spotify</a></li>
+								</ul>
+							</div>
+						</section>
+
 						<div class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
 				</div>
 
