--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7ZSPJHRT1H"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-7ZSPJHRT1H');
+</script>
 <head>
     <title>Ethereal by HTML5 UP</title>
     <meta charset="utf-8" />
