--- a/_includes/index.html
+++ b/_includes/index.html
@@ -39,7 +39,7 @@
 								</ul>
 							</div>
 							<div class="image filtered span-1-75" data-position="25% 25%">
-								<img src="images/pic01.jpg" alt="" />
+								<img src="/assets/images/ejNature.jpg" alt="" />
 							</div>
 						</section>
 
@@ -47,13 +47,13 @@
 						<section class="panel spotlight medium right" id="first">
 							<div class="content span-7">
 								<h2 class="major">Who am I?</h2>
-								<p>I am a  <b>Junior at Morgan State University</b> studying mechatronics engineering. I keep myself involved in labs and projects that develop my skills that allow me to support others where I can.</p>
+								<p><b>I am a <u>Junior at Morgan State University</u> studying mechatronics engineering. I keep myself involved in labs and projects that develop my skills that allow me to support others where I can.</b></p>
 
-								<input type="submit" value="My Resume" class="button large">
+								<a class="button primary color2 large" href="">My Resume</a>
 
 							</div>
 							<div class="image filtered tinted" data-position="top left">
-								<img src="images/pic02.jpg" alt="" />
+								<img src="/assets/images/ejProfesional.png" alt="" />
 							</div>
 						</section>
 
@@ -79,25 +79,25 @@
 						<section class="panel spotlight large left">
 							<div class="content span-5">
 								<h2 class="major">Building myself and supporting others</h2>
-								<p>I do my best to be an advocate for STEM youth programs in Baltimore, as well as pay forward the support I was given.</p>
+								<p><b>I do my best to be an advocate for STEM youth programs in Baltimore, as well as pay forward the support I was given.</b></p>
 
-								<input type="submit" value="My Thank You List" class="button primary color2 large">
+								<input type="submit" value="My Thank You List" class="button primary large">
 							</div>
 
 							<div class="image filtered tinted" data-position="top right">
-								<img src="images/pic03.jpg" alt="" />
+								<img src="/assets/images/ejTeam.jpg" />
 							</div>
 						</section>
 
 					<!-- Panel -->
 						<section class="panel">
 							<div class="intro color2">
-								<h2 class="major">My Projects</h2>
+								<h2 class="major">My Projects and Notables</h2>
 								<p>From labs to hobbies and extracurricular activities... </p>
 							</div>
 							<div class="gallery">
 								<div class="group span-3">
-									<a href="images/gallery/fulls/01.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
+									<a href="images/gallery/fulls/01.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/01.jpg" alt="" />Helllo</a>
 									<a href="images/gallery/fulls/02.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
 									<a href="images/gallery/fulls/03.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
 								</div>
