A decent starting point

--- a/_includes/index.html
+++ b/_includes/index.html
@@ -49,7 +49,7 @@
 								<h2 class="major">Who am I?</h2>
 								<p><b>I am a <u>Junior at Morgan State University</u> studying mechatronics engineering. I keep myself involved in labs and projects that develop my skills that allow me to support others where I can.</b></p>
 
-								<a class="button primary color2 large" href="">My Resume</a>
+								<a class="button primary color2 large" href="https://drive.google.com/file/d/10i52zcbbCOrX2pLs_mpoyLXEJuMtyC2e/view?usp=drive_link" target="_blank">My Resume</a>
 
 							</div>
 							<div class="image filtered tinted" data-position="top left">
@@ -81,7 +81,7 @@
 								<h2 class="major">Building myself and supporting others</h2>
 								<p><b>I do my best to be an advocate for STEM youth programs in Baltimore, as well as pay forward the support I was given.</b></p>
 
-								<input type="submit" value="My Thank You List" class="button primary large">
+								<a class="button primary large" href="/thankyou">My Thank You List</a>
 							</div>
 
 							<div class="image filtered tinted" data-position="top right">
@@ -93,22 +93,58 @@
 						<section class="panel">
 							<div class="intro color2">
 								<h2 class="major">My Projects and Notables</h2>
-								<p>From labs to hobbies and extracurricular activities... </p>
+								<p><b>From labs to hobbies and extracurricular activities... </b></p>
+								
+									<b>
+										<span class="icon large solid fa-file-alt">
+											<span class="label">File</span>
+										</span> Article or Report
+
+										<br> 
+
+										<span class="icon large solid fa-tools">
+											<span class="label">tools</span>
+										</span> Mechanical Projects
+
+										<br> 
+										
+										<span class="icon large solid fa-code">
+											<span class="label">Code</span>
+										</span> Software Projects
+
+										<br>
+										
+										<span class="icon large solid fa-star">
+											<span class="label">Star</span>
+										</span> Notable Mentions 
+
+										<br> 
+									</b> 
+								
 							</div>
 							<div class="gallery">
 								<div class="group span-3">
-									<a href="images/gallery/fulls/01.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/01.jpg" alt="" />Helllo</a>
-									<a href="images/gallery/fulls/02.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
-									<a href="images/gallery/fulls/03.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
+									<a href="https://www.morgan.edu/news/new-programs-work-of-the-future" target="https://www.morgan.edu/news/new-programs-work-of-the-future" class="image filtered span-3" data-position="bottom"><img src="/assets/images/ejLab1.jpg" alt="" /> - <span class="icon large solid fa-star"><span class="label"></span></span> <span class="icon large solid fa-file-alt"><span class="label">File</span></span></a>
+									
+									<a class="image filtered span-1-5" href="https://www.thebeorg.com/" target="https://www.thebeorg.com/" data-position="center"><img src="/assets/images/ejTechCon.png" alt="" /><span class="icon large solid fa-star"><span class="label"></span></span></a>
+
+
+									<a href="https://technical.ly/professional-development/ethan-joyner-baltimore-bolts/" target="_blank" class="image filtered span-1-5" data-position="bottom"><img src="/assets/images/EthanJoyner.png" alt="" /> - <span class="icon large solid fa-star"><span class="label"></span></span><span class="icon large solid fa-file-alt"><span class="label"></span></span></a>
+
 								</div>
-								<a href="images/gallery/fulls/04.jpg" class="image filtered span-2-5" data-position="top"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
+
+								<a href="/CHR" class="image filtered span-2-5" data-position="top"><img src="/assets/images/CHR/chr0.jpg" alt="" /> - <span class="icon large solid fa-code"><span class="label"></span></span><span class="icon large solid fa-tools"><span class="label"></span></span></a>
+
 								<div class="group span-4-5">
-									<a href="images/gallery/fulls/05.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
-									<a href="images/gallery/fulls/06.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
-									<a href="images/gallery/fulls/07.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
-									<a href="images/gallery/fulls/08.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
+									<a target="_blank" href="https://github.com/Morgan-State-University-MCRL/SCPI-Automation-Example" class="image filtered span-3" data-position="top"><img src="/assets/images/scpi.jpg" alt="" /> - <span class="icon large solid fa-file-alt"><span class="label">File</span></span><span class="icon large solid fa-code"><span class="label"></span></span></a>
+									
+									
+									<a target="_blank" href="https://www.youtube.com/watch?v=JKNOS1W9n8I" class="image filtered span-1-5" data-position="center"><img src="assets/images/ejMSSI.jpg" alt="" /> - <span class="icon large solid fa-star"><span class="label"></span></span></a>
+
+									<a target="_blank" href="https://waterformsu.com" class="image filtered span-1-5" data-position="bottom"><img src="/assets/images/wfmsu.png" alt="" /> - <span class="icon large solid fa-star"><span class="label"></span></span></a>
+									
+									<a target="_blank" href="https://www.youtube.com/watch?v=2jsez92Aygk" class="image filtered span-3" data-position="top"><img src="assets/images/ejgalen.png" alt="" />- <span class="icon large solid fa-star"><span class="label"></span></span><span class="icon large solid fa-tools"><span class="label"></span></span></a>
 								</div>
-								<a href="images/gallery/fulls/09.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
 							</div>
 						</section>
 
@@ -116,16 +152,15 @@
 							<div class="intro color4">
 								<h2 class="major">Contact</h2>
 								<ul class="contact-icons color2">
-									<li class="icon brands fa-linkedin"><a href="#">LinkedIn</a></li>
-									<li class="icon brands fa-youtube"><a href="#">Youtube</a></li>
-									<li class="icon brands fa-instagram"><a href="#">Instagram</a></li>
-									<li class="icon brands fa-github"><a href="#">GitHub</a></li>
-									<li class="icon brands fa-spotify"><a href="#">Spotify</a></li>
+									<li class="icon brands fa-linkedin"><a target="_blank" href="https://www.linkedin.com/in/el2joyner/">LinkedIn</a></li>
+									<li class="icon brands fa-youtube"><a target="_blank" href="https://www.youtube.com/channel/UC6Cqeb92MaK0qGZ5qkdXVWw">Youtube</a></li>
+									<li class="icon brands fa-instagram"><a target="_blank" href="https://www.instagram.com/its.most.definitely.ethan/">Instagram</a></li>
+									<li class="icon brands fa-github"><a target="_blank" href="https://github.com/EthanJoyner">GitHub</a></li>
 								</ul>
 							</div>
 						</section>
 
-						<div class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+						<div class="copyright">&copy; Ethan Joyner 2024</div>
 				</div>
 
 		</div>
