--- a/_includes/thankyou.html
+++ b/_includes/thankyou.html
@@ -6,6 +6,7 @@
 -->
 
 <head>
+	<title>Thank you</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="/assets/css/main.css" />
@@ -28,47 +29,95 @@
 				<div id="wrapper">
 
 					<!-- Panel (Spotlight) -->
-                    <section class="panel spotlight large left">
+                    <!-- <section class="panel spotlight large left">
                         <div class="content span-5">
                             <h2 class="major">Thank you</h2>
                             <p>It may take a village to raise a child, but it takes an enormous amount of patience and wisdom to develop an engineer.</p>
-
-
                             <a class="button color2 large" href="/"> Back to Home...</a>
                         </div>
                         <div class="image filtered tinted" data-position="top right">
                             <img src="images/pic03.jpg" alt="" />
                         </div>
-                    </section>
+                    </section> -->
+
+                    <!-- Panel (Banner) -->
+						<section class="panel banner right">
+							<div class="content color0 span-3-75">
+								<h1 class="major">Thank you!</h1>
+								<p><b>It may take a village to raise a child, but it takes an enormous amount of patience and wisdom to develop an engineer.</b></p>
+                                <a class="button primary large" href="/"> Back to Home...</a>
+							</div>
+						</section>
 
 					<!-- Panel -->
 
 						<section class="panel color1">
                             <div class="intro">
-								<h2 class="major">Name Here</h2>
+								<h2 class="major">The world's best parents! Love you Mom and Dad !</h2>
 							</div>
 						</section>
                         <section class="panel color2">
                             <div class="intro">
-								<h2 class="major">Name Here</h2>
+								<h2 class="major">Sharron Brackett</h2>
 							</div>
 						</section>
                        
                         <section class="panel color2-alt">
                             <div class="intro">
-								<h2 class="major">Name Here</h2>
+								<h2 class="major">Dr. Getachew Befekadu and Anthony Johnson</h2>
 							</div>
 						</section>
                         <section class="panel color4-alt">
                             <div class="intro">
-								<h2 class="major">Name Here</h2>
+								<h2 class="major">Jayesh Jariwala</h2>
 							</div>
 						</section>
+						<section class="panel color1">
+                            <div class="intro">
+								<h2 class="major">Michael Ochs and Nathaniel Larimore</h2>
+							</div>
+						</section>
+                        <section class="panel color2">
+                            <div class="intro">
+								<h2 class="major">Kim Loper</h2>
+							</div>
+						</section>
+                       
+                        <section class="panel color2-alt">
+                            <div class="intro">
+								<h2 class="major">Tyler Lee</h2>
+							</div>
+						</section>
+                        <section class="panel color4-alt">
+                            <div class="intro">
+								<h2 class="major">Maurice Bowden, Bruce Laws, and Jeffery Wright</h2>
+							</div>
+						</section>
+						<section class="panel color1">
+                            <div class="intro">
+								<h2 class="major">Marcus Sills</h2>
+							</div>
+						</section>
+                        <section class="panel color2">
+                            <div class="intro">
+								<h2 class="major">Ed Mullen</h2>
+							</div>
+						</section>
+                       
+                        <!-- <section class="panel color2-alt">
+                            <div class="intro">
+								<h2 class="major"></h2>
+							</div>
+						</section>
+                        <section class="panel color4-alt">
+                            <div class="intro">
+								<h2 class="major">  </h2>
+							</div>
+						</section> -->
 
 
 					<!-- Copyright -->
-						<div class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
-
+					<div class="copyright">&copy; Ethan Joyner 2024</div>
 				</div>
 
 		</div>
