--- a/_includes/index.html
+++ b/_includes/index.html
@@ -49,7 +49,7 @@
 								<h2 class="major">Who am I?</h2>
 								<p><b>I am a <u>Junior at Morgan State University</u> studying mechatronics engineering. I keep myself involved in labs and projects that develop my skills that allow me to support others where I can.</b></p>
 
-								<a class="button primary color2 large" href="https://drive.google.com/file/d/10i52zcbbCOrX2pLs_mpoyLXEJuMtyC2e/view?usp=drive_link" target="_blank">My Resume</a>
+								<a class="button primary color2 large" href="https://drive.google.com/file/d/123eh6-Fk5T64mPqcTZ-0rhGYg2-BAec2/view?usp=sharing" target="_blank">My Resume</a>
 
 							</div>
 							<div class="image filtered tinted" data-position="top left">
